# Thread_Network_Application

./: README.md
sensor_device/: CMakeLists.txt  prj.conf
sensor_device/src/: coap_client.c  coap_client_utils.c  coap_client_utils.h
switch_device/: CMakeLists.txt  prj.conf
switch_device/boards/: nrf52840dk_nrf52840.overlay
switch_device/dts/bindings/: pwm-servo.yaml
switch_device/include/: coap_utils.h  dk_buttons_and_leds.h  motor.h
switch_device/interface/: coap_server_client_interface.h
switch_device/src/: coap_server.c  coap_utils.c  motor.c
